--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,16 @@ dependencies:
   fluttertoast: ^8.2.12
   speech_to_text: ^7.0.0
   animated_splash_screen: ^1.3.0
+  firebase_core: ^3.11.0
+  firebase_auth: ^5.5.0
+  awesome_snackbar_content: ^0.1.5
+  intl: ^0.19.0
+  font_awesome_flutter: ^10.8.0
+  loading_animation_widget: ^1.3.0
+  smooth_page_indicator: ^1.2.1
+  shared_preferences: ^2.5.2
+  cloud_firestore: ^5.6.5
+
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +80,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
+    - assets/files/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
